# shengwu

./: .gitattributes  .gitignore  README.md  docker-compose.yml  start.bat  全自动化与性能优化方案.md  对齐客户方案.md  排期计划.md  通用生物科研机器学习平台_需求与计划书.md
backup/src/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ocr-requirements.txt  pyproject.toml
backup/src/app/: __init__.py  __main__.py  main.py  ocr_runner.py  worker.py
backup/src/app/api/: deps.py  router.py
backup/src/app/core/: config.py  errors.py  logging.py  middleware.py  security.py
backup/src/app/db/: session.py  tables.py
backup/src/app/models/: __init__.py  core.py
backup/src/app/schemas/: auth.py  common.py  dataset.py  document.py  health.py  job.py  (+7 more)
backup/src/docs/: DELIVERY_CHECKLIST.md  GOLD_STANDARD_SPEC.md  GOLD_STANDARD_SYNTHETIC_REPORT.json  GOLD_STANDARD_SYNTHETIC_REPORT.md  INTERNAL_PREFLIGHT_2026-07-19.md  OPERATIONS_GUIDE.md  PRODUCTION_CHECKLIST.md  UAT_ACCEPTANCE_REPORT.md  USER_GUIDE.md  新手使用指南.md  自动发现机制说明.md
backup/src/migrations/: env.py
backup/src/scripts/: __init__.py  backup.py  coverage_acceptance.py  generate_lock.py  gold_standard_evaluate.py  gold_standard_import.py  gold_standard_manifest.py  load_test.py  restore.py  security_check.py
backup/src/tests/: test_dataset.py  test_day16_backend.py  test_export_workbooks.py  test_extraction.py  test_field_discovery.py  test_gold_standard_tools.py  test_health.py  test_integration_workflow.py  test_memberships.py  test_ml.py  test_new_features.py  test_ocr.py  test_openapi.py  test_page_image.py  test_prisma.py  test_project_archive_and_terms.py  test_report.py  test_report_generate_e2e.py  test_security.py  test_storage.py  test_terms_and_field_schemas.py  test_utils.py  test_worker_reliability.py
(+65 files in other folders)
